# pta2021-autumn

./: CMakeLists.txt  config.json  main.py  readme.md
PTA/PTA1001/: ArraysAndLinkedLists.cpp  data.json  readme.md
PTA/PTA1002/: StackOfHats.cpp  data.json
PTA/PTA1003/: PlaygroundExploration.cpp  data.json
PTA/PTA1004/: SortedCartesianTree.cpp  SortedCartesianTree.py  data.json  readme.md
